# website-2026

./: .env.dist  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.dist  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09430ff72f79_initial_schema.py  20260307_0910_admin_comment.py  20260307_0938_disabled_user.py  3142ebd16337_discord.py
backend/app/: config.py  console.py  database.py  main.py  version.py
backend/app/api/: admin_events.py  admin_files.py  admin_menu.py  admin_modules.py  admin_pages.py  admin_recruitment.py  admin_servers.py  admin_stats.py  admin_urls.py  admin_users.py  auth.py  calendar.py  dcsbot.py  dependencies.py  discord_voice.py  files.py  header.py  map.py  menu.py  metrics.py  mission_maker.py  modules.py  opengraph.py  pages.py  recruitment.py  roster.py  router.py  servers.py  teamspeak.py  urls.py  users.py
backend/app/auth/: dependencies.py  jwt.py  permissions.py
backend/app/commands/: calendar.py  database.py  discord.py  email.py  import_yaml.py  maintenance.py  teamspeak.py
backend/app/models/: __init__.py  calendar.py  content.py  dcs.py  module.py  recruitment.py  user.py
backend/app/schemas/: auth.py  calendar.py  content.py  dcs.py  discord_voice.py  header.py  module.py  recruitment.py  roster.py  teamspeak.py  user.py
backend/app/services/: calendar.py  (+6 more)
backend/fixtures/: __init__.py  calendar.py  content.py  modules.py  reference.py  user_modules.py  users.py
backend/tests/: conftest.py  factories.py
(+174 files in other folders)
