[project]
name = "veaf-website"
version = "2.0.0"
description = "VEAF Community Website - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0,<5",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "apscheduler>=3.10.4",
    "fastapi-mail>=1.4.2",
    "cachetools>=5.5.0",
    "email-validator>=2.2.0",
    "typer>=0.15.0",
    "ts3>=1.0.11",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "factory-boy>=3.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["greenlet"]

[tool.ruff]
target-version = "py312"
line-length = 120
